tests/type/good/loop.hel
foreign io_unit: IO<()>;

sum_loop = (n: i32): i32 {
    loop (acc = 0, i: i32 = 0) {
        if (i >= n) {
            acc
        } else {
            recur(acc + i, i + 1)
        }
    }
};

main = io_unit;
