tests/type/bad/recur_type_mismatch.hel
foreign io_unit: IO<()>;

x = loop (a: i32 = 0) {
    recur(true)
};

main = io_unit;
